feat(*): 添加工厂成员接口, 优化了数据库和大部分代码